first remote commit

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Case_Study_Scribe</name>
+	<name>Scribe</name>
 	<comment></comment>
 	<projects>
 	</projects>
